shortcut add (static)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <button onclick="addquickpop()">
-            <strong>+ | </strong> Quick
+            <strong>✎</strong>
         </button>
         <a href="#">Gmail</a>
         <a href="#">Gmail2</a>
@@ -20,7 +20,7 @@
         <div class="search-drop">
             <div class="engine-bar">
                 <button onclick="addenginepop()">
-                    <strong>+ | </strong> Engine
+                    <strong>✎</strong>
                 </button>
                 <button style="border: 3px solid red;"><strong style="color:red;">G | </strong> Google</button>
                 <button style="border: 3px solid green;"><strong style="color:green;">M | </strong>Microsoft</button>
@@ -54,6 +54,189 @@
                 <a href="#">
                     <p>Hello World!</p>
                 </a>
+            </div>
+        </div>
+        <div class="shortcuts">
+            <div>
+                <button>
+                    <strong>A</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>B</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>C</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>D</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>E</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>F</strong>
+                </button>
+                word
+            </div> <div>
+                <button>
+                    <strong>A</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>B</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>C</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>D</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>E</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>F</strong>
+                </button>
+                word
+            </div> <div>
+                <button>
+                    <strong>A</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>B</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>C</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>D</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>E</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>F</strong>
+                </button>
+                word
+            </div> <div>
+                <button>
+                    <strong>A</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>B</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>C</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>D</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>E</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>F</strong>
+                </button>
+                word
+            </div> <div>
+                <button>
+                    <strong>A</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>B</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>C</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>D</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>E</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>
+                    <strong>F</strong>
+                </button>
+                word
+            </div>
+            <div>
+                <button>+
+                </button>
+                Add
             </div>
         </div>
     </main>
