structing css html over

--- a/index.html
+++ b/index.html
@@ -58,226 +58,125 @@
         </div>
         <div class="shortcuts">
             <div>
-                <button>
+                <a href="#">
                     <strong>A</strong>
-                </button>
+                </a href="#">
                 word
             </div>
             <div>
-                <button>
+                <a href="#">
                     <strong>B</strong>
-                </button>
+                </a href="#">
                 word
             </div>
             <div>
-                <button>
+                <a href="#">
                     <strong>C</strong>
-                </button>
+                </a href="#">
                 word
             </div>
             <div>
-                <button>
+                <a href="#">
                     <strong>D</strong>
-                </button>
+                </a href="#">
                 word
             </div>
             <div>
-                <button>
+                <a href="#">
                     <strong>E</strong>
-                </button>
+                </a href="#">
                 word
             </div>
             <div>
-                <button>
+                <a href="#">
                     <strong>F</strong>
-                </button>
-                word
-            </div> <div>
-                <button>
-                    <strong>A</strong>
-                </button>
+                </a href="#">
                 word
             </div>
             <div>
                 <button>
-                    <strong>B</strong>
+                    <strong>✎</strong>
                 </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>C</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>D</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>E</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>F</strong>
-                </button>
-                word
-            </div> <div>
-                <button>
-                    <strong>A</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>B</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>C</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>D</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>E</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>F</strong>
-                </button>
-                word
-            </div> <div>
-                <button>
-                    <strong>A</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>B</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>C</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>D</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>E</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>F</strong>
-                </button>
-                word
-            </div> <div>
-                <button>
-                    <strong>A</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>B</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>C</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>D</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>E</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>F</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>+
-                </button>
-                Add
             </div>
         </div>
-    </main>
-</body>
-
-</html>
-
-<!-- <script src="quicklinks/form/form.js"></script> 
-<script src="script.js" defer></script>
-
-        <section class="shortcuts">
-            <div>
-                <button>
-                    <strong>A</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>
-                    <strong>B</strong>
-                </button>
-                word
-            </div>
-            <div>
-                <button>+
-                </button>
-                Add
-            </div>
-        </section>
     </main>
     <footer>
-        <iframe class="game" scrolling="no" src="t-rex-runner/index.html"></iframe>
-        <div class="footleft">
-            <button onclick="toggleTheme()">Light</button>
-            <button>Save Battery</button>
-        </div>
-        <div class="footright">
+        <button>⚙️</button>
+        <section class="right-footer">
             <a href="">Extensions</a>
             <a href="">Downloads</a>
             <a href="">History</a>
             <a href="">BookMarks</a>
             <a href="">Settings</a>
-        </div>
-    </footer>-->
+        </section>
+    </footer>
+    <section class="edit-quick">
+        <section class="tab">
+            <button class="buttonsel">ADD</button>
+            <button>MODIFY</button>
+            <button>REARRANGE</button>
+        </section>
+
+
+        <!-- <form id="add">
+            <label for="site-name">Name:</label>
+            <input id="site-name" type="text" placeholder="eg.. Google">
+            <label for="site-link">Link:</label>
+            <input id="site-link" type="text" placeholder="eg.. https://www.google.com/">
+            <button>Add</button>
+        </form> -->
+
+        <!-- <form id="modify">
+            <input list="lists" placeholder="search, select and modify...">
+            <datalist id="lists">
+                <option value="Gmail1">
+                <option value="Gmail2">
+                <option value="Web1">
+                <option value="Web">
+            </datalist>
+            <button>Delete</button>
+            <label for="site-name">Name:</label>
+            <input id="site-name" placeholder="select first.." type="text">
+            <label for="site-link">Link:</label>
+            <input id="site-link" placeholder="select first.." type="text">
+            <button>Update</button>
+        </form> -->
+
+
+        <form id="rearrange">
+            <div>
+                Gmail1
+                <div>
+                    <button>⬆️</button>
+                    <button>⬇️</button>
+                </div>
+            </div>
+            <hr>
+            <div>
+                Gmail2
+                <div>
+                    <button>⬆️</button>
+                    <button>⬇️</button>
+                </div>
+            </div>
+            <hr>
+            <div>
+                Web1
+                <div>
+                    <button>⬆️</button>
+                    <button>⬇️</button>
+                </div>
+            </div>
+            <hr>
+            <div>
+                Web2
+                <div>
+                    <button>⬆️</button>
+                    <button>⬇️</button>
+                </div>
+            </div>
+        </form>
+    </section>
+</body>
+
+</html>
