--- a/index.html
+++ b/index.html
@@ -3,7 +3,131 @@
 
 <head>
     <title>New Tab</title>
+    <meta charset="UTF-8">
+    <style>
+        :root {
+            --border-radius: 0px;
+            --animated-drop-down: none
+        }
+
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box
+        }
+
+        body {
+            background-color: var(--body-bg-color);
+            color: var(--fg-color);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            width: 100%;
+            height: 100%
+        }
+
+        header {
+            position: sticky;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 100;
+            border-bottom: 1px solid grey;
+            display: flex;
+            flex-wrap: wrap;
+            padding: .25em;
+            flex-direction: row;
+            gap: 1rem;
+            justify-content: flex-start;
+            align-items: center;
+            background-color: var(--fg-color)
+        }
+
+        main {
+            display: flex;
+            flex-direction: column;
+            align-items: center
+        }
+
+        a {
+            background-color: var(--fg-color);
+            color: var(--bg-color);
+            text-decoration: none
+        }
+
+        header a {
+            font-size: medium
+        }
+
+        header button {
+            background-color: var(--bg-color);
+            color: var(--fg-color)
+        }
+
+        header button:hover {
+            background-color: var(--focus-invert-bg)
+        }
+
+        button {
+            cursor: pointer;
+            padding: 5px 5px;
+            border: none;
+            border-radius: var(--border-radius);
+            color: var(--bg-color);
+            background-color: var(--fg-color);
+            justify-content: center;
+            align-items: center;
+            font-size: large
+        }
+
+        button:hover {
+            background-color: var(--focus-bg)
+        }
+
+        input {
+            outline: none;
+            border: none;
+            width: 100%;
+            padding: .5rem;
+            background-color: var(--fg-color);
+            color: var(--bg-color);
+            font-size: large
+        }
+
+        input::placeholder {
+            color: var(--bg-color);
+            font-size: medium
+        }
+
+        footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 100;
+            padding: .25rem 1rem;
+            background-color: var(--fg-color);
+            display: flex;
+            gap: 10px;
+            justify-content: space-between;
+            align-items: center;
+            border-top: 1px solid grey
+        }
+
+        iframe {
+            width: clamp(50vw, 800px, 90%);
+            height: 200px;
+            border: none;
+            border-radius: var(--border-radius);
+            background-color: var(--bg-color);
+            margin: 0 auto
+        }
+    </style>
     <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="css/dark.css"> -->
+    <link rel="stylesheet" href="css/light.css">
+    <!-- <link rel="stylesheet" href="css/sysdark.css"> -->
+    <!-- <link rel="stylesheet" href="css/nonbattery.css"> -->
 </head>
 
 <body>
@@ -143,7 +267,7 @@
         </form> -->
 
 
-        <form id="rearrange">
+        <!-- <form id="rearrange">
             <div>
                 Gmail1
                 <div>
@@ -175,8 +299,9 @@
                     <button>⬇️</button>
                 </div>
             </div>
-        </form>
+        </form> -->
     </section>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
