--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
 <head>
     <title>New Tab</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
         :root {
+            --body-bg-color: rgb(175, 175, 175);
+            --bg-color: white;
+            --fg-color: black;
+            --focus-bg: rgb(56, 56, 56);
+            --focus-invert-bg: rgb(200, 200, 200);
             --border-radius: 0px;
             --animated-drop-down: none
         }
@@ -14,6 +20,12 @@
             padding: 0;
             margin: 0;
             box-sizing: border-box
+        }
+
+        h2,
+        h3,
+        p {
+            text-align: end;
         }
 
         body {
@@ -108,6 +120,7 @@
             padding: .25rem 1rem;
             background-color: var(--fg-color);
             display: flex;
+            flex-wrap: wrap;
             gap: 10px;
             justify-content: space-between;
             align-items: center;
@@ -115,19 +128,26 @@
         }
 
         iframe {
-            width: clamp(50vw, 800px, 90%);
-            height: 200px;
+            width: 100%;
+            height: 400px;
             border: none;
             border-radius: var(--border-radius);
             background-color: var(--bg-color);
-            margin: 0 auto
+            margin: 0 auto;
+        }
+
+        footer button {
+            background-color: #000;
+            justify-content: center
+        }
+
+        footer button:hover {
+            background-color: #464646
         }
     </style>
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="css/dark.css"> -->
-    <link rel="stylesheet" href="css/light.css">
-    <!-- <link rel="stylesheet" href="css/sysdark.css"> -->
-    <!-- <link rel="stylesheet" href="css/nonbattery.css"> -->
+    <link rel="stylesheet" href="css/nonbattery.css">
 </head>
 
 <body>
@@ -223,6 +243,8 @@
                 </button>
             </div>
         </div>
+        <iframe src="game-clock.html" frameborder="0"></iframe>
+        <div id="main-wrapper"></div>
     </main>
     <footer>
         <button>⚙️</button>
@@ -240,7 +262,6 @@
             <button>MODIFY</button>
             <button>REARRANGE</button>
         </section>
-
 
         <!-- <form id="add">
             <label for="site-name">Name:</label>
@@ -265,7 +286,6 @@
             <input id="site-link" placeholder="select first.." type="text">
             <button>Update</button>
         </form> -->
-
 
         <!-- <form id="rearrange">
             <div>
