minor fixs of bugs and features added for responsive design

--- a/game/game-clock.html
+++ b/game/game-clock.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/game/gameclock.css">
-    <!-- <link rel="stylesheet" href="css/game/darkgameclock.css"> -->
+    <link rel="stylesheet" href="css/gameclock.css">
+    <!-- <link rel="stylesheet" href="css/darkgameclock.css"> -->
 </head>
 
 <body>
