--- a/index.html
+++ b/index.html
@@ -59,30 +59,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-        }
-
-        @media(min-width:1100px) {
-            main {
-                display: grid;
-                margin: 2rem;
-                grid-template-columns: 1.5fr 1fr;
-                grid-template-rows: auto;
-                align-items: start;
-                grid-template-areas: "mainleft mainright";
-            }
-
-            .main-right {
-                position: relative;
-                top: 10%;
-                grid-area: mainright;
-                width: 100%;
-            }
-
-            .main-left {
-                grid-area: mainleft;
-                display: flex;
-                flex-direction: column;
-            }
+            justify-content: center;
         }
 
         a {
@@ -113,7 +90,8 @@
             background-color: var(--fg-color);
             justify-content: center;
             align-items: center;
-            font-size: large
+            font-size: larger;
+            text-align: center;
         }
 
         button:hover {
@@ -153,9 +131,6 @@
         <button onclick="editextension()">
             <strong>&#x2699;</strong>
         </button>
-        <button onclick="addquickpop()">
-            <strong>✎</strong>
-        </button>
         <a href="#">Gmail</a>
         <a href="#">Gmail2</a>
         <a href="#">Web1</a>
@@ -163,34 +138,31 @@
     </header>
     <main>
         <section class="main-left">
-            <div class="shortcuts">
-                <button>
-                    Downloads &#x2913;
+            <div class="essentials">
+                <button title="BookMarks">
+                    <p>&#128278;</p>
                 </button>
-                <button>
-                    BookMarks &#128278;
+                <button title="Downloads">
+                    <p>&#x2913;</p>
                 </button>
-                <button>
-                    Extensions &#x1F9E9;
+                <button title="Extensions">
+                    <p>&#x1F9E9;</p>
                 </button>
-                <button>
-                    History &#10227;
+                <button title="History">
+                    <p>&#10227;</p>
                 </button>
-                <button>
-                    Settings &#x1F6E0;
+                <button title="Settings">
+                    <p>&#x1F6E0;</p>
                 </button>
             </div>
+            <div class="engine-bar">
+                <button style="border: 3px solid blue;"><strong style="color:blue;">G | </strong> Google</button>
+                <button style="border: 3px solid green;"><strong style="color:green;">M |
+                    </strong>Microsoft</button>
+                <button style="border: 3px solid red;"><strong style="color:red;">Y | </strong>Youtube</button>
+                <button style="border: 3px solid purple;"><strong style="color:purple;">Y | </strong>Yahoo</button>
+            </div>
             <div class="search-drop">
-                <div class="engine-bar">
-                    <button onclick="addenginepop()">
-                        <strong>✎</strong>
-                    </button>
-                    <button style="border: 3px solid blue;"><strong style="color:blue;">G | </strong> Google</button>
-                    <button style="border: 3px solid green;"><strong style="color:green;">M |
-                        </strong>Microsoft</button>
-                    <button style="border: 3px solid red;"><strong style="color:red;">Y | </strong>Youtube</button>
-                    <button style="border: 3px solid purple;"><strong style="color:purple;">Y | </strong>Yahoo</button>
-                </div>
                 <div class="search">
                     <strong id="show-search">Google</strong>
                     <input placeholder="search..">
@@ -244,11 +216,6 @@
                 <div>
                     <button>F</button>
                     word
-                </div>
-                <div>
-                    <button>
-                        <strong>✎</strong>
-                    </button>
                 </div>
             </div>
         </section>
