--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         }
 
         body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
             background-color: var(--body-bg-color);
             color: var(--fg-color);
             display: flex;
@@ -47,7 +50,7 @@
             border-bottom: 1px solid grey;
             display: flex;
             flex-wrap: wrap;
-            padding: .25em;
+            padding: .5em;
             flex-direction: row;
             gap: 1rem;
             justify-content: flex-start;
@@ -69,7 +72,7 @@
         }
 
         header a {
-            font-size: medium
+            font-size: 1rem
         }
 
         header button {
@@ -90,7 +93,7 @@
             background-color: var(--fg-color);
             justify-content: center;
             align-items: center;
-            font-size: larger;
+            font-size: 1.15rem;
             text-align: center;
         }
 
@@ -128,9 +131,6 @@
 
 <body>
     <header>
-        <button onclick="editextension()">
-            <strong>&#x2699;</strong>
-        </button>
         <a href="#">Gmail</a>
         <a href="#">Gmail2</a>
         <a href="#">Web1</a>
@@ -139,26 +139,28 @@
     <main>
         <section class="main-left">
             <div class="essentials">
-                <button title="BookMarks">
+                <button title="EDIT-LINKS">
+                    <p>✎</p>
+                </button>
+                <button id="btn-bookmarks" title="BookMarks">
                     <p>&#128278;</p>
                 </button>
-                <button title="Downloads">
+                <button id="btn-downloads" title="Downloads">
                     <p>&#x2913;</p>
                 </button>
-                <button title="Extensions">
+                <button id="btn-extensions" title="Extensions">
                     <p>&#x1F9E9;</p>
                 </button>
-                <button title="History">
+                <button id="btn-history" title="History">
                     <p>&#10227;</p>
                 </button>
-                <button title="Settings">
+                <button id="btn-settings" title="Browser Settings">
                     <p>&#x1F6E0;</p>
                 </button>
             </div>
             <div class="engine-bar">
                 <button style="border: 3px solid blue;"><strong style="color:blue;">G | </strong> Google</button>
-                <button style="border: 3px solid green;"><strong style="color:green;">M |
-                    </strong>Microsoft</button>
+                <button style="border: 3px solid green;"><strong style="color:green;">M | </strong>Microsoft</button>
                 <button style="border: 3px solid red;"><strong style="color:red;">Y | </strong>Youtube</button>
                 <button style="border: 3px solid purple;"><strong style="color:purple;">Y | </strong>Yahoo</button>
             </div>
@@ -195,27 +197,27 @@
             <div class="shortcuts">
                 <div>
                     <button>A</button>
-                    word
+                    <p>WORD</p>
                 </div>
                 <div>
                     <button>B</button>
-                    word
+                    <p>WORD</p>
                 </div>
                 <div>
                     <button>C</button>
-                    word
+                    <p>WORD</p>
                 </div>
                 <div>
                     <button>D</button>
-                    word
+                    <p>WORD</p>
                 </div>
                 <div>
                     <button>E</button>
-                    word
+                    <p>WORD</p>
                 </div>
                 <div>
                     <button>F</button>
-                    word
+                    <p>WORD</p>
                 </div>
             </div>
         </section>
