minor bug fixes

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             justify-content: center;
             align-items: center;
             font-size: 1.15rem;
+            border: 2px solid var(--focus-bg);
             text-align: center;
         }
 
@@ -225,22 +226,22 @@
             <iframe src="game/game-clock.html" frameborder="0"></iframe> <!--Load this via script js-->
         </section>
     </main>
-    <section class="edit-quick">
+    <!-- <section class="edit-quick">
         <section class="tab">
             <button class="buttonsel">ADD</button>
             <button>MODIFY</button>
             <button>REARRANGE</button>
         </section>
 
-        <!-- <form id="add">
+        <form id="add">
             <label for="site-name">Name:</label>
             <input id="site-name" type="text" placeholder="eg.. Google">
             <label for="site-link">Link:</label>
             <input id="site-link" type="text" placeholder="eg.. https://www.google.com/">
             <button>Add</button>
-        </form> -->
+        </form>
 
-        <!-- <form id="modify">
+        <form id="modify">
             <input list="lists" placeholder="search, select and modify...">
             <datalist id="lists">
                 <option value="Gmail1">
@@ -254,9 +255,9 @@
             <label for="site-link">Link:</label>
             <input id="site-link" placeholder="select first.." type="text">
             <button>Update</button>
-        </form> -->
+        </form>
 
-        <!-- <form id="rearrange">
+        <form id="rearrange">
             <div>
                 Gmail1
                 <div>
@@ -288,9 +289,9 @@
                     <button>⬇️</button>
                 </div>
             </div>
-        </form> -->
+        </form>
     </section>
-    <script src="script.js" defer></script>
+    <script src="script.js" defer></script> -->
 </body>
 
 </html>
