--- a/index.html
+++ b/index.html
@@ -116,14 +116,6 @@
             color: var(--bg-color);
             font-size: medium
         }
-
-        iframe {
-            width: 100%;
-            height: 400px;
-            border: none;
-            border-radius: var(--border-radius);
-            margin: 0 auto;
-        }
     </style>
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="css/dark.css"> -->
@@ -223,7 +215,8 @@
             </div>
         </section>
         <section class="main-right"> <!--Load this via script js-->
-            <iframe src="game/game-clock.html" frameborder="0"></iframe> <!--Load this via script js-->
+            <iframe style="width: 100%;height: 400px;border: none;border-radius: var(--border-radius);margin: 0 auto;"
+                src="game/game-clock.html" frameborder="0"></iframe> <!--Load this via script js-->
         </section>
     </main>
     <!-- <section class="edit-quick">
