theme functionality Added

--- a/game/game-clock.html
+++ b/game/game-clock.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/gameclock.css">
-    <!-- <link rel="stylesheet" href="css/darkgameclock.css"> -->
 </head>
 
 <body>
@@ -39,6 +38,7 @@
             <button id="btn-toggle">START</button>
         </div>
     </div>
+    <script src="../theme.js" data-filename="css/darkgameclock.css"></script>
     <script src="gamescript.js" defer></script>
 </body>
 
