--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
     </style>
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="css/dark.css"> -->
-    <link rel="stylesheet" href="css/nonbattery.css">
+    <link rel="stylesheet" href="css/game_search_resp.css">
+    <link id rel="stylesheet" href="css/nonbattery.css">
 </head>
 
 <body>
@@ -214,77 +215,13 @@
                 </div>
             </div>
         </section>
-        <section class="main-right"> <!--Load this via script js-->
+        <section class="main-right">
             <iframe style="width: 100%;height: 400px;border: none;border-radius: var(--border-radius);margin: 0 auto;"
-                src="game/game-clock.html" frameborder="0"></iframe> <!--Load this via script js-->
+                src="game/game-clock.html" frameborder="0"></iframe>
         </section>
     </main>
-    <!-- <section class="edit-quick">
-        <section class="tab">
-            <button class="buttonsel">ADD</button>
-            <button>MODIFY</button>
-            <button>REARRANGE</button>
-        </section>
-
-        <form id="add">
-            <label for="site-name">Name:</label>
-            <input id="site-name" type="text" placeholder="eg.. Google">
-            <label for="site-link">Link:</label>
-            <input id="site-link" type="text" placeholder="eg.. https://www.google.com/">
-            <button>Add</button>
-        </form>
-
-        <form id="modify">
-            <input list="lists" placeholder="search, select and modify...">
-            <datalist id="lists">
-                <option value="Gmail1">
-                <option value="Gmail2">
-                <option value="Web1">
-                <option value="Web">
-            </datalist>
-            <button>Delete</button>
-            <label for="site-name">Name:</label>
-            <input id="site-name" placeholder="select first.." type="text">
-            <label for="site-link">Link:</label>
-            <input id="site-link" placeholder="select first.." type="text">
-            <button>Update</button>
-        </form>
-
-        <form id="rearrange">
-            <div>
-                Gmail1
-                <div>
-                    <button>⬆️</button>
-                    <button>⬇️</button>
-                </div>
-            </div>
-            <hr>
-            <div>
-                Gmail2
-                <div>
-                    <button>⬆️</button>
-                    <button>⬇️</button>
-                </div>
-            </div>
-            <hr>
-            <div>
-                Web1
-                <div>
-                    <button>⬆️</button>
-                    <button>⬇️</button>
-                </div>
-            </div>
-            <hr>
-            <div>
-                Web2
-                <div>
-                    <button>⬆️</button>
-                    <button>⬇️</button>
-                </div>
-            </div>
-        </form>
-    </section>
-    <script src="script.js" defer></script> -->
+    <script src="theme.js" data-filename="css/dark.css"></script>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
