--- a/game/game-clock.html
+++ b/game/game-clock.html
@@ -38,7 +38,7 @@
             <button id="btn-toggle">START</button>
         </div>
     </div>
-    <script src="../theme.js" data-filename="css/darkgameclock.css"></script>
+    <script src="../js/theme.js" data-filename="css/darkgameclock.css"></script>
     <script src="gamescript.js" defer></script>
 </body>
 
