--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
                 src="game/game-clock.html" frameborder="0"></iframe>
         </section>
     </main>
-    <script src="theme.js" data-filename="css/dark.css"></script>
-    <script src="script.js" defer></script>
+    <script src="js/theme.js" data-filename="css/dark.css"></script>
+    <script src="js/script.js" defer></script>
 </body>
 
 </html>
