theme switch Optimization

--- a/game/game-clock.html
+++ b/game/game-clock.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/gameclock.css">
+    <link rel="stylesheet" href="css/gamedark.css" id="dark-theme-link">
 </head>
 
 <body>
@@ -38,9 +39,8 @@
             <button id="btn-toggle">START</button>
         </div>
     </div>
-    <script src="../js/theme.js" data-filename="css/darkgameclock.css"></script>
+    <script src="../js/theme.js"></script>
     <script src="gamescript.js" defer></script>
 </body>
 
 </html>
-<!-- Make a Js then InnerHTML -->
