--- a/index.html
+++ b/index.html
@@ -117,10 +117,8 @@
             font-size: medium
         }
     </style>
-    <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="css/dark.css"> -->
-    <link rel="stylesheet" href="css/game_search_resp.css">
-    <link id rel="stylesheet" href="css/nonbattery.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/dark.css" id="dark-theme-link">
 </head>
 
 <body>
@@ -215,12 +213,8 @@
                 </div>
             </div>
         </section>
-        <section class="main-right">
-            <iframe style="width: 100%;height: 400px;border: none;border-radius: var(--border-radius);margin: 0 auto;"
-                src="game/game-clock.html" frameborder="0"></iframe>
-        </section>
     </main>
-    <script src="js/theme.js" data-filename="css/dark.css"></script>
+    <script src="js/theme.js"></script>
     <script src="js/script.js" defer></script>
 </body>
 
